Fix the uneven spaces between the footer social icons

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -77,7 +77,7 @@
 
 .settings a:last-of-type,
 .social a:last-of-type {
-  margin-right: 0;
+  margin-right: 1;
 }
 
 .settings a:hover,
